# objectDetectorWithPython-

./: README.md  myproject.toml  requirements.txt  setup.cfg  tox.ini
src/PyDetector/: PyObjectDetector.pyx  setup.py
src/PyDetector/lib/: PyObjectDetector.pxd  openCVModuls.pxd
tests/: test.py
